--- a/assets/main.css
+++ b/assets/main.css
@@ -77,15 +77,28 @@ th,td{
 }
 
 /* Website Banner */
-.banner {position: relative; font-family:'Roboto Slab',serif;}
-.top-left {font-size:2.33em; color: #505050; background: #fafafa; text-align: center; width: 1000px; height: 67px; position: absolute; padding: 36px 0 0 0; top: 0px;}
+.banner {position: relative; font-family:'Roboto Slab',serif; height: auto;}
+/* .top-left {font-size:2.33em; color: #505050; background: #fafafa; text-align: center; width: 1000px; height: 67px; position: absolute; padding: 36px 0 0 0; top: 0px;} */
+.top-left {
+    font-size: 2.33em;
+    color: #505050;
+    background: #fafafa;
+    text-align: center;
+    width: 100%;
+    /* position: absolute; */
+    /* top: 20px; */
+    /* left: 0; */
+    padding: 16px 0;
+    /* z-index: 2; */
+}
 .bottom-right {font-size:2.33em; color: #fafafa; line-height: 1.5em; width: auto; height: 100px; padding: 0px 27px 27px 0px; text-align: right; position: absolute; bottom: 0px; right: 0px; text-shadow: 0px 0px 6px #000000;}
 .banner-image {
     width: 100%;
     height: auto;
-    object-fit: contain;
     max-width: 100%;
     max-height: 100%;
+    object-fit: contain;
+    object-position: top;
 }
 /* Conference Title Logo */
 .title1{color: #b2132e; text-shadow: 1px 1px 3px #c0c0c0;} 
