--- a/assets/main.css
+++ b/assets/main.css
@@ -147,3 +147,19 @@ footer{font-size:0.875em; margin-top:12em; text-align:center;}
     table.footer{font-size:0.33em;}
 }
 
+.sponsors {
+    width: 100%;
+    text-align: center;
+}
+
+.sponsors tr {
+    display: flex;
+    justify-content: center;
+}
+
+.sponsor {
+    text-align: center;
+    padding: 10px;
+}
+
+
